Revert "[FIO fromtree] dts-binding: modem: wnc-14a2a: remove base_label to fix build errors"
Merging upstream Zephyr with this commit.

This reverts commit 4dd9ceb56831089eeb22f65232600e7234f27a92.

Signed-off-by: Michael Scott <mike@foundries.io>

--- a/dts/bindings/modem/wnc,m14a2a.yaml
+++ b/dts/bindings/modem/wnc,m14a2a.yaml
@@ -50,4 +50,6 @@ properties:
       category: optional
       description: UART RTS pin if no HW flow control (set to always enabled)
       generation: define, use-prop-name
+
+base_label: WNCM14A2A
 ...
