--- a/drivers/modem/Kconfig
+++ b/drivers/modem/Kconfig
@@ -41,7 +41,7 @@ config MODEM_SHELL
 
 config MODEM_WNCM14A2A
 	bool "Enable Wistron LTE-M modem driver"
-	select UART_INTERRUPT_DRIVEN
+	depends on UART_INTERRUPT_DRIVEN
 	select MODEM_RECEIVER
 	select NET_OFFLOAD
 	select UART_MCUX_2 if BOARD_FRDM_K64F
