--- a/subsys/net/lib/lwm2m/CMakeLists.txt
+++ b/subsys/net/lib/lwm2m/CMakeLists.txt
@@ -10,6 +10,7 @@ zephyr_library_sources(
     lwm2m_obj_device.c
     lwm2m_rw_plain_text.c
     lwm2m_rw_oma_tlv.c
+    lwm2m_util.c
     )
 
 # LWM2M RD Client Support
