[FIO toup] net: lwm2m: introduce LwM2M resource value persistence
When enabled, the LwM2M subsystem will persist the values of
resources chosen via the lwm2m_engine_set_persist() function
based on the last value they had prior to reset.

The settings subsystem is used for this purpose, so HW would
need to have a storage partition defined.

Signed-off-by: Michael Scott <mike@foundries.io>

--- a/subsys/net/lib/lwm2m/CMakeLists.txt
+++ b/subsys/net/lib/lwm2m/CMakeLists.txt
@@ -31,6 +31,11 @@ zephyr_library_sources_ifdef(CONFIG_LWM2M_RW_JSON_SUPPORT
     lwm2m_rw_json.c
     )
 
+# Persistence settings
+zephyr_library_sources_ifdef(CONFIG_LWM2M_PERSIST_SETTINGS
+    lwm2m_settings.c
+    )
+
 # IPSO Objects
 zephyr_library_sources_ifdef(CONFIG_LWM2M_IPSO_TEMP_SENSOR
     ipso_temp_sensor.c
