[FIO fromlist] boards: arm: nrf52840-based: Free up flash room for sample apps
The current flash configurations for all nRF52840's in Zephyr is
VERY constrained when it comes to allowing samples any space for
storage or custom areas.  It only leaves the last 4 pages of flash
for "storage".

The nRF52840 is also capable of using OpenThread which defaults
to using the last 4 pages of flash for storing OpenThread-related
network data.

This means that while using OpenThread under any configuration
designed to use mcuboot partition slots, there is no space left
over for storage of any kind.

Let's reduce the scratch partition size to a reasonable 72k
(down from 120k) and make room for storage, OpenThread and
a bit extra which can be used later when more use cases arise.

Signed-off-by: Michael Scott <mike@foundries.io>

--- a/boards/arm/nrf52840_pca10090/nrf52840_pca10090.dts
+++ b/boards/arm/nrf52840_pca10090/nrf52840_pca10090.dts
@@ -72,11 +72,21 @@
 		};
 		scratch_partition: partition@de000 {
 			label = "image-scratch";
-			reg = <0x000de000 0x0001e000>;
+			reg = <0x000de000 0x00012000>;
 		};
-		storage_partition: partition@fc000 {
+
+		/*
+		 * The flash starting at 0x000f0000 and ending at
+		 * 0x000fffff is reserved for use by the application.
+		 */
+
+		/*
+		 * If enabled, partition for FCB/NFFS/NVS will be created in
+		 * this area.
+		 */
+		storage_partition: partition@f0000 {
 			label = "storage";
-			reg = <0x000fc000 0x00004000>;
+			reg = <0x000f0000 0x00004000>;
 		};
 	};
 };
